<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="36sp"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/main_green"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_txt_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="50dp"
        android:hint="@string/email"
        android:textColorHint="#5B697A"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppinslight"
        android:background="@drawable/rounded_background"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <EditText
        android:id="@+id/edit_txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/usn"
        android:textColorHint="#5B697A"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppinslight"
        android:background="@drawable/rounded_background"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_txt_email"/>

    <EditText
        android:id="@+id/edit_txt_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/pw"
        android:textColorHint="#5B697A"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppinslight"
        android:background="@drawable/rounded_background"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_txt_username"/>

    <EditText
        android:id="@+id/edit_txt_date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/dob"
        android:textColorHint="#5B697A"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppinslight"
        android:background="@drawable/rounded_background"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_txt_password" />

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="304dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/baseline_calendar_month_24_green"
        app:layout_constraintStart_toStartOf="@id/edit_txt_date_of_birth"
        app:layout_constraintTop_toBottomOf="@id/edit_txt_password" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginBottom="150dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/poppinsbold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/main_green"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>