<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:layout_marginHorizontal="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="36sp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/main_green"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_txt_usn_email_login"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="50dp"
        android:hint="@string/usn"
        android:fontFamily="@font/poppinslight"
        android:textColorHint="#5B697A"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@drawable/rounded_background"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <EditText
        android:id="@+id/edit_txt_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/pw"
        android:textColorHint="#5B697A"
        android:fontFamily="@font/poppinslight"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@drawable/rounded_background"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/edit_txt_usn_email_login"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="150dp"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/main_green"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppinsbold"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>